# STATIC

./: pyproject.toml
.devcontainer/: devcontainer.json
static/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
static/openenv_static.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
static/server/: Dockerfile  __init__.py  app.py  static_environment.py
